--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@remix-run/serve": "^1.18.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.18.0",
@@ -25,6 +26,7 @@
     "@types/jquery": "^3.5.16",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.6",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
   },
